Se modifico el titulo del cuerpo

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <!-- Menú de navegación del sitio -->
 <ul class="navbar">
-  <li><a href="indice.html">Página principal</a>
+  <li><a href="indice.html">Página Cuarta Generacion</a>
   <li><a href="meditaciones.html">Meditaciones</a>
   <li><a href="ciudad.html">Mi ciudad</a>
   <li><a href="enlaces.html">Enlaces</a>
